@startuml
class User {
  userID
  email
  balance
}

class Role {
  roleName
}

class Order {
  orderNumber
  totalCost
}

class Orderline {
  amount
  lineCost
}

class Cupcake

class Bottom {
  bottomName
  price
}

class Topping {
  topName
  price
}

User "1" --> "1" Role : har
User "1" --> "0..*" Order : afgiver
Order "1" --> "1..*" Orderline : består af
Orderline "1" --> "1" Cupcake : indeholder
Cupcake "1" --> "1" Bottom : har
Cupcake "1" --> "1" Topping : har

@enduml